--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>JavaScript Lab</title>
 </head>
 <body>
+  <h2>Please Enter a time:</h2>
+  <p>*24-hour time format HH:MM</p>
   <input type="text" id="time" name="time">
   <button>Submit</button>
   <h1 id="greeting"></h1>
